Adding development annotations